# tublub

./: CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/tublub/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_main.py
