[project]
name = "tublub"
version = "0.4.0"
description = "Convert tabular data files with Tablib."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Fredrik Mellström", email = "11281108+harkabeeparolus@users.noreply.github.com" },
]
keywords = ["tablib", "csv", "tsv", "excel", "xlsx"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = ["tablib[cli,html,ods,xls,xlsx,yaml]>=3.2.1,<4"]

[project.urls]
Homepage = "https://github.com/harkabeeparolus/tublub"

[project.scripts]
tublub = "tublub.main:cli"

[dependency-groups]
dev = ["mypy>=1", "pytest>=6", "ty>=0.0.1a0"]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # conflicts with ruff format
  "D203",    # conflicts with D211
  "D213",    # conflicts with D212
  "FIX002",  # TODO comments are intentional
  "T20",     # print statements — this is a CLI tool
  "TD002",   # extra TODO stuff we don't use
  "TD003",   # extra TODO stuff we don't use
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**" = ["ANN", "ARG", "D", "INP001", "PLR2004", "RUF059", "S101"]
